--- a/src/main/webapp/resources/styles/styles.css
+++ b/src/main/webapp/resources/styles/styles.css
@@ -7,6 +7,18 @@
     font: inherit;
 }
 
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 16px;
+    background-clip: padding-box;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: lightgrey;
+}
+
+
 html, body {
     height: 100%;
 }
@@ -17,7 +29,7 @@ body {
     line-height: 1.6;
     display: flex;
     flex-direction: column;
-    background-image: url("images/background.jpeg");
+    background-image: url("../images/background.jpeg");
 }
 
 .header {
